test/positive/i275-uniqueNames.cfr
abstract A
	b

a : A
	b

abstract b

c
	`b
		a