test/negative/i127-loop.cfr
abstract A : B
abstract B : A